@@ -5,6 +5,7 @@ Last modified: $Date$
 Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 
 
 2.5b3
+- [Localize] Catalan Localization
 - [Feature] Spotlight Importer for bookmarks
 - [Feature] Synchronize bookmarks with .Mac
 - [Feature] Send custom commands to server (FTP)
@@ -12,7 +13,8 @@ Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser lice
 - [Bugfix] New connection dialog remembers field values
 - [Bugfix] Correctly parsing filenames beginning with whitespace (FTP)
 - [Bugfix] Don't allow editing files with well known binary file type extensions
-- [Bugfix] Various improvements
+- [Bugfix] Excluding individual files when synchronising
+- [Bugfix] Various bugfixes reported by users
 
 2.5b2
 - [Localize] Indonesian Localization
